--- a/css/index021.css
+++ b/css/index021.css
@@ -10,33 +10,17 @@ body {
   background-color: #FFF;
 }
 
-nav {
-  width: 100%;
-  background-color: blanchedalmond;
-  padding: 0px 100px;
-}
-nav ul {
+ul {
+  padding: 0;
   list-style: none;
-  margin: 0px;
 }
-nav ul li {
-  display: inline-block;
-  position: relative;
-}
-nav ul li a {
-  display: block;
-  text-decoration: none;
-  padding: 10px;
-}
-nav ul li ul {
+
+.menu-items {
+  -moz-columns: 3;
+       columns: 3;
   display: none;
 }
-nav ul li .block-list {
-  width: 200px;
-  height: 100px;
-  border: 1px solid #DDCCFF;
-  background-color: red;
-}
-nav ul li:hover .block-list {
-  cursor: pointer;
+
+.menu > li:hover .menu-items {
+  display: block;
 }/*# sourceMappingURL=index021.css.map */
