--- a/src/index021.scss
+++ b/src/index021.scss
@@ -8,46 +8,19 @@ html,
 body {
     font-family: sans-serif;
     background-color: #FFF;
+    // margin: 0;
 }
 
-nav {
-    width: 100%;
-    background-color: blanchedalmond;
-    padding: 0px 100px;
+ul {
+    padding: 0;
+    list-style: none;
+}
 
+.menu-items {
+    columns: 3;
+    display: none;
+}
 
-    ul {
-        list-style: none;
-        margin: 0px;
-
-        li {
-            display: inline-block;
-            // background-color: red;
-            position: relative;
-
-            a {
-                display: block;
-                text-decoration: none;
-                // background-color: yellow;
-                padding: 10px;
-            }
-
-            ul {
-                display: none;
-            }
-
-            .block-list {
-                width: 200px;
-                height: 100px;
-                border: 1px solid #DDCCFF;
-                background-color: red;
-            }
-
-            &:hover .block-list {
-                cursor: pointer;
-            }
-        }
-
-
-    }
+.menu>li:hover .menu-items {
+    display: block;
 }
